# emuCHIP8_t

./: CMakeLists.txt
inc/: emuchip8_t.hpp
src/: emuchip8_t.cpp  main.cpp  print_bytecode.py
